plugins {
    id 'java'
}

group 'io.spe'
version '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(19))
    }
}

repositories {
    mavenCentral()
    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'

    // https://mvnrepository.com/artifact/org.ow2.asm/asm
    implementation 'org.ow2.asm:asm:9.3'
    // https://mvnrepository.com/artifact/org.jetbrains/annotations
    implementation 'org.jetbrains:annotations:23.0.0'
    // https://mvnrepository.com/artifact/org.bytedeco/llvm
    implementation 'org.bytedeco:llvm-platform:14.0.3-1.5.8-SNAPSHOT'
    // https://mvnrepository.com/artifact/org.ow2.asm/asm
    implementation 'org.ow2.asm:asm:9.3'
    // https://mvnrepository.com/artifact/org.ow2.asm/asm-util
    implementation 'org.ow2.asm:asm-util:9.3'
}

test {
    useJUnitPlatform()
    jvmArgs(['--enable-preview'])
}

tasks.withType(JavaCompile) {
    options.compilerArgs += ['--enable-preview']
}